[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Components/EntityInfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Components/TrapOnCollide.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Entity.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Materials/Palette/12.tres" type="Material" id=4]
[ext_resource path="res://Scripts/Components/Health.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]

[node name="box" type="Spatial"]
script = ExtResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
material_override = ExtResource( 4 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 5 )

[node name="TrapOnCollide" type="Node" parent="."]
script = ExtResource( 2 )

[node name="EntityInfoPanel" parent="." instance=ExtResource( 1 )]
default_name = "Sticky Goo Box"
