[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Meshes/ModelScenes/reflect_wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ParticleEffects/Stars.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Entity.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/arcaneMake.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Components/Sounds.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Components/ReflectProjectiles.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Components/ParentToCreator.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Components/ArcaneWall.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Components/Health.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("reflect_wall:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1.58272, 1.58272, 1 ) ]
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.59986, 1.61258, 0.77367 )

[node name="ArcaneWall" type="Spatial"]
transform = Transform( 0.9, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 3 )
manually_set_entity_type = 0
subtype_name = "ARCANE_WALL"
can_move = false
age_limit_seconds = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "show"
anims/show = SubResource( 1 )

[node name="Particles" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.92724, 0, 0, 0, 1.92724, 0, 0, 0, 1, 0.00233703, 1.04415, -0.448292 )
visibility_aabb = AABB( -4, -5.02539, -4, 8, 8, 8 )
local_coords = false

[node name="ReflectProjectiles" parent="." instance=ExtResource( 6 )]
invert_projectile = false

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.869994, -0.255469 )
shape = SubResource( 2 )

[node name="ParentToCreator" parent="." instance=ExtResource( 7 )]
z_offset = 2.0

[node name="Health" parent="." instance=ExtResource( 9 )]
max_health = 200

[node name="reflect_wall" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.58272, 0, -8.74228e-08, 0, 1.58272, 0, 1.38366e-07, 0, -1, 0, 0.953264, -0.995277 )
script = ExtResource( 8 )

[node name="Sounds" parent="." instance=ExtResource( 5 )]
on_create_stream = ExtResource( 4 )

[editable path="Particles"]
