[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/ParticleEffects/IceBeamEffect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Entity.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Components/ChangeSpeedOnCollide.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Components/Damage.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Components/ParentToCreator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sounds/icebeamnoise.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/icebeamnoise release.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Components/Beam.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Components/Sounds.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Components/PrettyDestroy.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 1 )

[node name="IceBeam" type="Spatial"]
transform = Transform( 1.00216, 0, 0, 0, 1.00216, 0, 0, 0, 1.00216, 0, 0, -0.163156 )
script = ExtResource( 2 )
age_limit_seconds = 6.0

[node name="Area" type="Area" parent="."]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.4, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 3.49691e-08, -1, -4.37114e-08, 0, 0, -0.5 )
shape = SubResource( 1 )

[node name="Damage" parent="." instance=ExtResource( 4 )]
damage = 5
repeat_damage = true
repeat_time = 0.26

[node name="Beam" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
beam_effect_path = NodePath("../IceBeamEffect")
beam_length = 13.0
repeat_length_check = true

[node name="Sounds" parent="." instance=ExtResource( 9 )]
on_live_stream = ExtResource( 6 )
on_destroy_stream = ExtResource( 7 )

[node name="IceBeamEffect" parent="." instance=ExtResource( 1 )]
beam_max_length = 14.0

[node name="StartEffect" parent="IceBeamEffect" index="0"]
transform = Transform( -2.11861e-08, 0.484681, 4.00182e-08, 0, -2.11861e-08, 0.91551, 0.484681, 2.11861e-08, 1.74925e-15, 0, 0, 1.06355 )

[node name="EndEffect" parent="IceBeamEffect" index="1"]
transform = Transform( 0.461747, 0, 0, 0, 0.461747, 0, 0, 0, 0.461747, 0, 0, 0 )

[node name="BeamOutline" parent="IceBeamEffect/Beam" index="0"]
transform = Transform( 0.145526, 0, 0, 0, -7.20055e-09, -0.0655624, 0, 0.5, -8.69857e-09, 0, 0, 0.5 )

[node name="Beam" parent="IceBeamEffect/Beam" index="1"]
transform = Transform( 0.0536802, 0, 0, 0, -1.19716e-08, -0.0536802, 0, 0.5, -4.28372e-09, 0, 0, 0.5 )

[node name="ParentToCreator" parent="." instance=ExtResource( 5 )]
y_offset = 1.0

[node name="ChangeSpeedOnCollide" parent="." instance=ExtResource( 3 )]
speed_modifier = -0.1
modifier_name = "icebeam"
duration = 1.0
repeat_time = 0.5

[node name="PrettyDestroy" parent="." instance=ExtResource( 10 )]
time_until_destroy = 0.3
destroy_node_array = [ NodePath("../IceBeamEffect/StartEffect/Ball2"), NodePath("../IceBeamEffect/EndEffect/Ball"), NodePath("../IceBeamEffect/Beam"), NodePath("../IceBeamEffect/EndEffect/Particles3"), NodePath("../Sounds") ]
stop_particle_node_array = [ NodePath("../IceBeamEffect/StartEffect/Particles2"), NodePath("../IceBeamEffect/StartEffect/Muzzle"), NodePath("../IceBeamEffect/EndEffect/Particles") ]

[editable path="IceBeamEffect"]
